# simd.rs

./: .travis.yml  Cargo.toml  README.md  search-index.js  upload-docs.sh
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Add.js  trait.Div.js  trait.Mul.js  trait.Sub.js
src/: bench.rs  f32.rs  f64.rs  lib.rs  test.rs  traits.rs
src/simd/: f32.rs.html  f64.rs.html  lib.rs.html  traits.rs.html
