[package]

authors = ["Jorge Aparicio <japaricious@gmail.com>"]
name = "simd"
version = "0.0.0"

[dev-dependencies]
rand = "*"

[dev-dependencies.approx]
git = "https://github.com/japaric/approx.rs"

[dev-dependencies.quickcheck]
git = "https://github.com/burntsushi/quickcheck"

[dev-dependencies.quickcheck_macros]
git = "https://github.com/burntsushi/quickcheck"
